--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ p.margins {
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Big Picture</h1>
+				
 				<nav>
 					<ul>
 						<li><a href="#intro">Team Hash</a></li>
@@ -122,16 +122,16 @@ p.margins {
 					<!-- Gallery  -->
 						<div class="gallery">
 							<article class="from-left">
-								<a href="images/fulls/01.jpeg" class="image fit"><img src="images/thumbs/01.jpeg" title="The Anonymous Red" alt="" /></a>
+								<a href="images/fulls/01.jpeg" class="image fit"><img src="images/thumbs/01.jpeg" title="Faculty Coordinator-Divyansh Thakur" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Airchitecture II" alt="" /></a>
+								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Mentor-Shaharyar Shamshi" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="images/fulls/03.jpeg" class="image fit"><img src="images/thumbs/03.jpeg" title="Air Lounge" alt="" /></a>
+								<a href="images/fulls/03.jpeg" class="image fit"><img src="images/thumbs/03.jpeg" title="Core Coordinator-Mratunjay Soni" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/04.jpeg" class="image fit"><img src="images/thumbs/04.jpeg" title="Carry on" alt="" /></a>
+								<a href="images/fulls/04.jpeg" class="image fit"><img src="images/thumbs/04.jpeg" title="Core Coordinator-Shubham Kamboj" alt="" /></a>
 							</article>
 							
 						</div>
