--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@ p.margins {
 
 		<!-- Header -->
 			<header id="header">
-				
+				<h1>Big Picture</h1>
 				<nav>
 					<ul>
-						<li><a href="#intro">Team Hash</a></li>
+						<li><a href="#intro">Team HASH</a></li>
 						<li><a href="#zero">About</a></li>
 
 						<li><a href="#one">What We Do</a></li>
@@ -44,7 +44,7 @@ p.margins {
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content">
 					<header>
-						<h2>Team Hash</h2>
+						<h2>Team HASH</h2>
 					</header>
 					
 					<footer>
